Move mobile sidebar toggle up to prevent bottom overlap

--- a/tools.css
+++ b/tools.css
@@ -967,9 +967,9 @@
 /* Mobile toggle button */
 .sidebar-toggle-mobile {
     position: fixed;
-    bottom: 25px;
-    left: 25px;
-    z-index: 999;
+    top: 100px;
+    left: 20px;
+    z-index: 10001;
     width: 50px;
     height: 50px;
     border-radius: 50%;
